--- a/Javascript-para-iniciantes/arrays-e-loop/index.html
+++ b/Javascript-para-iniciantes/arrays-e-loop/index.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tudo é Objeto</title>
+  <title>Arrays e Loops</title>
 </head>
 <body>
-  <!-- The text field -->
-  <input type="text" value="Hello World" id="myInput">
-
-  <!-- The button used to copy the text -->
-  <button class="btn" onclick="myFunction()">Copy text</button>
   <script src="script.js"></script>
 </body>
 </html>
